	* Fix bug configuration de smarty(backend,frontend,install) avec smarty 3.1
	* Fix bug avec l'affichage des tags dans les news (backend)
	* Fix bug template configLoad
	* Add addConfigFile dans les fonctions de template frontend
	* Ajout réécriture des URLS pour les plugins avec paramètres
	* Ajout du widget intégré "getplugin" pour la construction d'url de plugins dans les skins
	
2.3.5RC2

	* Changement de version 2.3.5 RC1 => RC2
	* Suppression de tinymce 3.4.4
	* Upgrade tinymce 3.4.5
	* Suppression de ckeditor 3.4.1
	* Upgrade ckeditor 3.6.2
	* Fix bug écriture du cache pour pdw_file_browser avec ckeditor
	* Modification de la classe css par defaut (class_container) dans widget_catalog_sidebar_category et widget_catalog_sidebar_products
	* Ajout des paramètres length et delimiter dans le widget_news_tags
	* Fix bug dans les images par défaut du listing dans un tags de news (theme par defaut remplacer par theme courant)
	* Ajout d'une condition pour la description d'un produit dans widget_load_catalog_category_last_products, widget_catalog_cat_load_products, widget_catalog_load_products

2.3.5RC1
	* Fix bug reset_forms dans jnews
	* Changement de la version de magix cms => 2.3.5RC1
	* Fix bug bouton upgrade (conditions)
	* Suppression du dossier forms dans le template par défaut
	* Modification du numéro de version 2.3.5 dans sql
	* Ajout du parsing d'url http://www.youtube.com/watch?v=xxxxxxxx pour le plugin youtube dans tinymce
	* Ajout de la possibilité d'utiliser deux types d'urls avec le plugin youtube dans tinyMCE
	* Correction au niveau CSS dans le plugin youtube dans tinyMCE
	* Ajout de la licence + Fichier README dans youtube plugin tinymce
	* Fix bug requête SQL pour charger les images de catégorie
	* Fix bug changement de fonction pour le chargement des images de catégories dans widget_catalog_cat_display
	* Charge uniquement les news activé pour la création du flux RSS
	* Ajout du système pour la construction de la sidebar par langue (admin)