@@ -138,5 +138,6 @@ RewriteRule ^(?:catalogue|catalog)[/]([/0-9]+)[-]([-_0-9a-zA-Z]+)[/]([/0-9]+)[-]
 ############################ Plugins ###############################
 RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)/{0,1}$     						/plugins.php?magixmod=$1								[QSA,L]
 ##### Additionnal params #####
-RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)[/]([-_0-9a-zA-Z]+)/{0,1}$     				/plugins.php?magixmod=$1&uniqp=$2								[QSA,L]
-RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)[/]([/0-9]+)[-]([-_&0-9a-zA-Z]+)/{0,1}$    	/plugins.php?magixmod=$1&pnum1=$2&pstring2=$3			[QSA,L]
+RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)[/]([^/]+)[-]([/0-9]+)/{0,1}$ /plugins.php?magixmod=$1&pstring1=$2&pnum1=$3 [QSA,L]
+RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)[/]([^/]+)[-]([/0-9]+)[/]([^/]+)[-]([/0-9]+)/{0,1}$ /plugins.php?magixmod=$1&pstring1=$2&pnum1=$3&pstring2=$4&pnum2=$5 [QSA,L]
+RewriteRule ^magixmod[/]([-_0-9a-zA-Z]+)[/]([^/]+)[-]([/0-9]+)[/]([^/]+)[-]([/0-9]+)[/]([^/]+)[-]([/0-9]+)/{0,1}$ /plugins.php?magixmod=$1&pstring1=$2&pnum1=$3&pstring2=$4&pnum2=$5&pstring3=$6&pnum3=$7 [QSA,L]
